--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <title>Weather Application</title>
 </head>
 
 <body>
     <div class="app-body">
-        test
+        <header>
+            <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
+                <i class="fas fa-search" aria-hidden="true"></i>
+                <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+            </form>
+        </header>
+        <main>
+            <section class="static-location">
+                <div class="city">Denver, CO</div>
+                <div class="date">Wednesday, April 1st 2020</div>
+            </section>
+            <div class="current">
+                <div class="condition">Sunny</div>
+                <div class="high-low">43°F / 65°F</div>
+                <div class="temp">65°F</div>
+            </div>
+        </main>
     </div>
     <script src="main.js"></script>
 </body>
