--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 <body>
     <div class="app-body">
         <header>
-            <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
-                <i class="fas fa-search" aria-hidden="true"></i>
-                <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-            </form>
+            <input class="form-control form-control-lg" type="text" placeholder="Search for a city...">
         </header>
         <main>
             <section class="static-location">
