talking to the api 😎  getting data back

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <div class="app-body">
         <header>
-            <input class="form-control form-control-lg" type="text" placeholder="Search for a city...">
+            <input class="search-box form-control form-control-lg" type="text" placeholder="Search for a city...">
         </header>
         <main>
             <section class="static-location">
-                <div class="city">Denver, CO</div>
                 <div class="date">Wednesday, April 1st 2020</div>
+                <div class="city">Denver, CO</div>
             </section>
             <div class="current">
-                <div class="condition">Sunny</div>
-                <div class="high-low">43°F / 65°F</div>
                 <div class="temp">65°F</div>
+                <div class="high-low">43°F / 65°F</div>
+                <div class="condition">Sunny</div>
             </div>
         </main>
     </div>
