added validation to search box

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="app-body">
         <header>
-            <input class="search-box form-control form-control-lg" type="text" placeholder="Search for a city...">
+            <input class="search-box form-control form-control-lg justify-center" type="text" placeholder="Search for a city...">
         </header>
         <main>
             <section class="static-location">
