it's as good as it's going to get 😎

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <section class="static-location">
-                <div class="date">Wednesday, April 1st 2020</div>
+                <div class="date"></div>
                 <div class="city">Denver, CO</div>
             </section>
             <div class="current">
